# hyperplonk

./: Cargo.toml
arithmetic/src/: virtual_polynomial.rs
distributed/: Cargo.toml
distributed/config/: circuit.toml  network.toml
distributed/src/: config.rs  dispatcher.rs  lib.rs  mmap.rs  mock.rs  structs.rs
distributed/src/worker/: build_f_hat.rs  keygen.rs  mod.rs  utils.rs  witness_commit.rs  zero_check.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: bench.rs
hyperplonk/src/: custom_gate.rs  lib.rs  prelude.rs  snark.rs  utils.rs
subroutines/src/pcs/: mod.rs
subroutines/src/pcs/multilinear_kzg/: mod.rs  srs.rs  util.rs
subroutines/src/poly_iop/: structs.rs
subroutines/src/poly_iop/sum_check/: mod.rs  prover.rs
subroutines/src/poly_iop/zero_check/: mod.rs
