[package]
name = "hp_distributed"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[[bin]]
name = "keygen_dispatcher"
path = "bin/keygen_dispatcher.rs"

[[bin]]
name = "prove_dispatcher"
path = "bin/prove_dispatcher.rs"


[dependencies]
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["full"] }
rand = "^0"
rand_chacha = { version = "0.3.1" }
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-serialize = { version = "^0.4.0" }
ark-ff = { version = "0.4.0", features = ["asm", "parallel"] }
ark-ec = { version = "0.4.0", features = ["parallel"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit/", rev = "cafc05e39692bbc5c383990063ad851f0b94a553", features = ["parallel"] }
merlin = "3.0.0"
serde = {version ="1.0.145", features = ["derive"]}
toml = "0.5.10"
rayon = "1.5.3"
once_cell = "1.15.0"
libc = "0.2"
fn-timer = { path = "../distributed_derive" }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
stubborn-io = "0.3"
strum = { version = "0.24", features = ["derive"] }
num_enum = "0.6.1"
subroutines = { path = "../subroutines" }
hyperplonk = {path="../hyperplonk"}
arithmetic = { path = "../arithmetic" }
displaydoc = { version = "0.2.3", default-features = false }
transcript = { path = "../transcript" }

[features]
default = ["trace"]
trace = ["ark-std/print-trace"]
